--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.ts"
+    "dev": "nodemon app.ts",
+    "generate": "drizzle-kit generate",
+    "migrate": "drizzle-kit migrate",
+    "studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
@@ -13,14 +16,23 @@
   "dependencies": {
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.43.1",
     "express": "^5.1.0",
-    "ollama": "^0.5.15"
+    "ioredis": "^5.6.1",
+    "learn-ai": "file:",
+    "ollama": "^0.5.15",
+    "pg": "^8.15.6",
+    "readline-sync": "^1.4.10"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.14",
+    "@types/pg": "^8.15.0",
+    "@types/readline-sync": "^1.4.8",
+    "drizzle-kit": "^0.31.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   }
 }
