--- a/package.json
+++ b/package.json
@@ -14,10 +14,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@langchain/community": "^0.3.42",
+    "@langchain/core": "^0.3.55",
+    "@langchain/ollama": "^0.2.0",
+    "@langchain/qdrant": "^0.1.2",
+    "@qdrant/js-client-rest": "^1.14.0",
     "axios": "^1.9.0",
+    "cheerio": "^1.0.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "express": "^5.1.0",
+    "html-to-text": "^9.0.5",
     "ioredis": "^5.6.1",
     "learn-ai": "file:",
     "ollama": "^0.5.15",
