--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^5.1.0",
     "html-to-text": "^9.0.5",
     "ioredis": "^5.6.1",
+    "langchain": "^0.3.25",
     "learn-ai": "file:",
     "ollama": "^0.5.15",
     "pg": "^8.15.6",
